--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "debug": "^3.0.0",
     "del": "^3.0.0",
     "express": "^4.15.4",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.2.0",
+    "md5": "^2.2.1",
     "mongoose": "^5.0.9",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
